--- a/projetos/repeticao/for/atividade2-for.html
+++ b/projetos/repeticao/for/atividade2-for.html
@@ -47,10 +47,12 @@
         <div class="container-condicionais">
             <div class="container-condicionais-esquerda">
                 <div class="container-explica-codigo">
-                    <h1>Soma de Elementos de uma Linha em Matriz</h1>
-                    <p> Este algoritmo lê uma matriz de inteiros (3x3) informada pelo usuário. Em seguida, solicita que
-                        o usuário escolha uma linha específica e calcula a soma de todos os elementos dessa linha. O
-                        resultado é exibido no documento HTML. </p>
+                    <h1>Gerador de Tabuada</h1>
+                    <p class="resumo">
+                        Digite um número no campo e descubra a tabuada completa desse número,
+                        de 1 até 10. Se o campo ficar vazio, será solicitado que você o preencha antes de continuar.
+                    </p>
+
                 </div>
             </div>
 
@@ -170,8 +172,8 @@
                     </code></pre>
 
                 </div>
-                <button onclick="abrirExemplo('matrizes/atividade3/index.html')" class="btn-explorar">teste você
-                    mesmo</button>
+                <button onclick="abrirExemplo('estruturaparafaca/atividade1/index.html')" class="btn-explorar">teste
+                    você mesmo</button>
             </div>
         </div>
     </section>
