--- a/repeticao.html
+++ b/repeticao.html
@@ -81,6 +81,12 @@
                     <p>A partir de um número inteiro informado pelo usuário
                         exibe uma sua tabuada</p>
                 </a>
+                <a class="card" href="projetos/repeticao/for/atividade2-for.html">
+
+                    <div class="img-card-condicionais" alt="Imagem ilustrativa Padrão sobre If e else"></div>
+                    <h3>Atividade 2</h3>
+                    <p>Gerador de Tabuada</p>
+                </a>
             </div>
         </div>
     </section>
