--- a/projetos/vetores/matriz/atividade3-matriz.html
+++ b/projetos/vetores/matriz/atividade3-matriz.html
@@ -20,8 +20,8 @@
                 <li>
                     <a class="opcao-menu" href="../../../condicionais.html">estruturas condicionais</a>
                     <div class="sub-categoria">
-                        <a href="condicionais.html#if-else">if else</a>
-                        <a href="condicionais.html#switch-case">switch case</a>
+                        <a href="../../../condicionais.html#if-else">if else</a>
+                        <a href="../../../condicionais.html#switch-case">switch case</a>
                     </div>
                 </li>
                 <li>
