--- a/projetos/repeticao/do-while/atividade1-do-while.html
+++ b/projetos/repeticao/do-while/atividade1-do-while.html
@@ -60,120 +60,7 @@
 
             <div class="container-condicionais-direita">
 
-                <div class="codigo-funcionando">
-                    <pre><code id="codigo">
-                    &lt;!DOCTYPE html&gt;
-                    &lt;html lang="pt-br"&gt;
-
-                    &lt;head&gt;
-                        &lt;meta charset="UTF-8"&gt;
-                        &lt;meta name="viewport" content="width=device-width, initial-scale=1.0"&gt;
-                        &lt;title&gt;Estrutura SE JavaScript&lt;/title&gt;
-                        &lt;link rel="stylesheet" type="text/css" href="css/config.css"&gt;
-                        &lt;script src="js/main.js"&gt;&lt;/script&gt;
-                        &lt;style&gt;
-                            body{
-                                background-color: #faf4fc;
-                            }
-                            section{
-                                margin-top: 0px auto;
-
-                            }
-                            .cadnumint{
-                                width: 300px;
-                                margin: 0px auto;
-                                font-weight: bold;
-                                margin-bottom: 10px;
-                                background-color: #ffd8ff;
-                                border-radius: 20px;
-                                color: #2e2e2e;
-
-                            }
-                            .cadnumint input{
-                                margin: 5px auto;
-                                width: 100%;
-                                padding: 5px 0;
-                                border-radius: 8px;
-                                
-                            }
-
-                            .cadnumint button{
-                                width: 30%;
-                                margin: 0 10%;
-                                background-color: #f4a2f7;
-                                border-radius: 8px;
-                                font-weight: bold;
-                                font-size: 16px;
-                                padding: 4px 0px;
-                            }
-                            .cadnumint button:hover{
-                                background-color: #b812aa;
-                                color: #ffffff;
-                            }
-                            label{
-                                float: left;
-                            }
-                            h2{
-                                text-align: center;
-                                margin-top: 0px;
-                                margin-bottom: 10px;
-                                font-size: 50px;
-                            }
-                    &lt;/style&gt;
-                    &lt;/head&gt;
-
-                   
-
-                    &lt;body&gt;
-                        &lt;section&gt;
-                            &lt;h2&gt;Atividade - Idade Usuário - Estrutura condicional "escolha - caso"(switch())&lt;/h2&gt;
-                            &lt;br&gt;&lt;br&gt;
-                            &lt;font face="arial"&gt;
-                                &lt;form name="frmnumint" action="#" method="get" onsubmit="return procFormulario()"&gt;
-                                    &lt;fieldset class="cadnumint"&gt;
-                                        &lt;legend&gt;Entrada de Dados&lt;/legend&gt;&lt;br&gt;
-                                        &lt;label for="numint"&gt;Informe a sua idade&lt;/label&gt;
-                                        &lt;input type="text" name="txtnumint" id="numint"&gt;&lt;br&gt;&lt;br&gt;
-                                        &lt;button type="reset"&gt;Limpa&lt;/button&gt;&lt;button type="submit"&gt;Enviar&lt;/button&gt;
-                                    &lt;/fieldset&gt;
-                                &lt;/form&gt;
-                            &lt;/font&gt;
-                        &lt;/section&gt;
-                    &lt;/body&gt;
-                    &lt;script&gt;
-                        function procFormulario(){
-                            if(document.frmnumint.txtnumint.value==""){
-                                alert("Preencha o campo idade");
-                                document.frmnumint.txtnumint.focus();
-                                return false;
-                            }else{
-                                let numint = parseInt(document.getElementById('numint').value);
-                                switch (true) {
-
-                                    case(numint &gt;= 0 &amp;&amp; numint &lt;= 3):
-                                        console.log("Bebê");
-                                        return false; 
-                                        break;
-                                    case(numint &gt;= 4 &amp;&amp; numint &lt;= 10):
-                                        console.log("Criança");
-                                        return false; 
-                                        break;
-                                    case(numint &gt;= 11 &amp;&amp; numint &lt;= 18):
-                                        console.log("Adolescente");
-                                        return false; 
-                                        break;
-                                    default: 
-                                        console.log("Adulto");
-                                        return false;
-                                        break;
-                                }
-                            }
-                        }
-                    &lt;/script&gt;
-                    &lt;/html&gt;
-                    </code></pre>
-
-                </div>
+                <textarea  id="codigo-funcionando"></textarea>
                 <button onclick="abrirExemplo('estruturafacaenquanto/atividade1/index.html')" class="btn-explorar">teste
                     você mesmo</button>
             </div>
