--- a/projetos/repeticao/do-while/atividade3-do-while.html
+++ b/projetos/repeticao/do-while/atividade3-do-while.html
@@ -61,7 +61,296 @@
             <div class="container-condicionais-direita">
 
                 <textarea  id="codigo-funcionando">
-                    
+                    <!DOCTYPE html>
+                    <html lang="pt-br">
+
+                    <head>
+                        <meta charset="UTF-8">
+                        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+                        <style>
+                            * {
+                                margin: 0;
+                                padding: 0;
+                                box-sizing: border-box;
+                            }
+
+                            body {
+                                background-color: #f0f4f8;
+                                color: #2c2c2c;
+                                font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+                                line-height: 1.6;
+                                display: flex;
+                                justify-content: center;
+                                align-items: center;
+                                min-height: 100vh;
+                                padding: 20px;
+                            }
+
+                            section {
+                                width: 100%;
+                                max-width: 500px;
+                                padding: 20px;
+                                background-color: white;
+                                border-radius: 16px;
+                                box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
+                            }
+
+
+                            h2 {
+                                text-align: center;
+                                font-size: 32px;
+                                color: #0a61e4;
+                                margin-bottom: 20px;
+                                text-transform: uppercase;
+                            }
+
+
+                            .resumo {
+                                background: #f0f4f8;
+                                border-left: 5px solid #0a61e4;
+                                padding: 12px 16px;
+                                border-radius: 8px;
+                                margin: 20px 0;
+                                font-size: 0.95rem;
+                                color: #333;
+                                line-height: 1.5;
+                            }
+
+                            .logo-senai {
+                                display: block;
+                                margin: 0 auto 20px;
+                                width: 150px;
+                                height: auto;
+                            }
+
+
+                            form {
+                                width: 100%;
+                            }
+
+                            fieldset {
+                                border: none;
+                                display: flex;
+                                flex-direction: column;
+                                gap: 15px;
+                                padding: 20px;
+                                background: #fff;
+                                border-radius: 16px;
+                                box-shadow: 0 8px 20px rgba(0,0,0,0.08);
+                            }
+
+                            legend {
+                                font-weight: bold;
+                                font-size: 1.1rem;
+                            }
+
+                            label {
+                                font-weight: bold;
+                                margin-bottom: 5px;
+                                display: block;
+                            }
+
+                            input {
+                                padding: 10px;
+                                border: 1px solid #ccc;
+                                border-radius: 10px;
+                                font-size: 1rem;
+                                transition: border-color 0.3s ease;
+                            }
+
+                            input:focus {
+                                border-color: #0a61e4;
+                                outline: none;
+                            }
+
+
+                            .botoes {
+                                display: flex;
+                                justify-content: space-between;
+                                gap: 10px;
+                            }
+
+                            .btn-enviar,
+                            .btn-limpar {
+                                padding: 10px 20px;
+                                font-size: 1rem;
+                                border: none;
+                                border-radius: 10px;
+                                cursor: pointer;
+                                transition: all 0.3s ease;
+                                width: 100%;
+                            }
+
+                            .btn-enviar {
+                                background-color: #0a61e4;
+                                color: white;
+                            }
+
+                            .btn-enviar:hover {
+                                background-color: #084ec2;
+                                transform: translateY(-2px);
+                                box-shadow: 0 4px 12px rgba(10, 97, 228, 0.3);
+                            }
+
+                            .btn-limpar {
+                                background-color: #e42b2b;
+                                color: white;
+                            }
+
+                            .btn-limpar:hover {
+                                background-color: #c72020;
+                                transform: translateY(-2px);
+                                box-shadow: 0 4px 12px rgba(228, 43, 43, 0.3);
+                            }
+
+
+                            .cadinteiro {
+                                width: 100%;
+                            }
+
+                            .cadinteiro {
+                                border: none;
+                                display: flex;
+                                flex-direction: column;
+                                gap: 15px;
+                                padding: 20px;
+                                background: #fff;
+                                border-radius: 16px;
+                                box-shadow: 0 8px 20px rgba(0,0,0,0.08);
+                            }
+
+                            .cadinteiro input {
+                                padding: 10px;
+                                border: 1px solid #ccc;
+                                border-radius: 10px;
+                                font-size: 1rem;
+                                transition: border-color 0.3s ease;
+                            }
+
+                            .cadinteiro input:focus {
+                                border-color: #0a61e4;
+                                outline: none;
+                            }
+
+                            .botoes {
+                                display: flex;
+                                justify-content: space-between;
+                                gap: 10px;
+                            }
+
+                            .btn-enviar,
+                            .btn-limpar {
+                                padding: 10px 20px;
+                                font-size: 1rem;
+                                border: none;
+                                border-radius: 10px;
+                                cursor: pointer;
+                                transition: all 0.3s ease;
+                                flex: 1;
+                            }
+
+                            .btn-enviar {
+                                background-color: #0a61e4;
+                                color: white;
+                            }
+
+                            .btn-enviar:hover {
+                                background-color: #084ec2;
+                                transform: translateY(-2px);
+                                box-shadow: 0 4px 12px rgba(10, 97, 228, 0.3);
+                            }
+
+                            .btn-limpar {
+                                background-color: #e42b2b;
+                                color: white;
+                            }
+
+                            .btn-limpar:hover {
+                                background-color: #c72020;
+                                transform: translateY(-2px);
+                                box-shadow: 0 4px 12px rgba(228, 43, 43, 0.3);
+                            }
+                        </style>
+                        <title>Atividade 3</title>
+                    </head>
+
+                    <body>
+                        <section>
+                            <img src="assets/img/marca_senai.png" alt="Logo SENAI" class="logo-senai">
+                            <h2>Exemplo - Estrutura "faça...enquanto" (do...while)</h2>
+                            <form name="frmformulario" action="#" method="get" onsubmit="return validaProc()">
+                                <fieldset class="cadinteiro">
+                                    <legend>Entrada de dados</legend>
+
+                                    <label for="numerouser">Informe um número</label>
+                                    <input type="text" id="numerouser">
+
+                                    <div class="botoes">
+                                        <button type="submit" class="btn-enviar">Enviar</button>
+                                        <button type="reset" class="btn-limpar">Limpar</button>
+                                    </div>
+                                </fieldset>
+                            </form>
+                        </section>
+                        <script>
+                            function validaProc() {
+                                let turma = 1, totalAlunosTurma1 = 0, totalAlunosTurma2 = 0, totalAlunosTurma3 = 0, somaNotasTurma1 = 0, somaNotasTurma2 = 0, somaNotasTurma3 = 0;
+
+                                do {
+                                    let qtdAlunos = parseInt(prompt("Turma " + turma + " - Informe a quantidade de alunos:"));
+                                    let acumuladorNotas = 0;
+                                    let contador = 1;
+
+                                    do {
+                                        let nota = parseFloat(prompt("Turma " + turma + " - Aluno " + contador + " - Informe a nota:"));
+                                        acumuladorNotas += nota;
+                                        contador++;
+                                    } while (contador <= qtdAlunos);
+
+                                    if (turma == 1) {
+                                        totalAlunosTurma1 = qtdAlunos;
+                                        somaNotasTurma1 = acumuladorNotas;
+                                    } else if (turma == 2) {
+                                        totalAlunosTurma2 = qtdAlunos;
+                                        somaNotasTurma2 = acumuladorNotas;
+                                    } else if (turma == 3) {
+                                        totalAlunosTurma3 = qtdAlunos;
+                                        somaNotasTurma3 = acumuladorNotas;
+                                    }
+
+                                    turma++;
+                                } while (turma <= 3);
+
+                                let mediaTurma1 = somaNotasTurma1 / totalAlunosTurma1;
+                                let mediaTurma2 = somaNotasTurma2 / totalAlunosTurma2;
+                                let mediaTurma3 = somaNotasTurma3 / totalAlunosTurma3;
+
+
+                                let totalAlunosMediaSete = 0;
+                                if (mediaTurma1 >= 7) totalAlunosMediaSete += totalAlunosTurma1;
+                                if (mediaTurma2 >= 7) totalAlunosMediaSete += totalAlunosTurma2;
+                                if (mediaTurma3 >= 7) totalAlunosMediaSete += totalAlunosTurma3;
+
+
+                                let totalAlunosGeral = totalAlunosTurma1 + totalAlunosTurma2 + totalAlunosTurma3;
+                                let somaNotasGeral = somaNotasTurma1 + somaNotasTurma2 + somaNotasTurma3;
+                                let mediaGeral = somaNotasGeral / totalAlunosGeral;
+
+                                alert(
+                                    "Médias das turmas:\n" +
+                                    "Turma 1: " + mediaTurma1.toFixed(2) + " (Alunos: " + totalAlunosTurma1 + ")\n" +
+                                    "Turma 2: " + mediaTurma2.toFixed(2) + " (Alunos: " + totalAlunosTurma2 + ")\n" +
+                                    "Turma 3: " + mediaTurma3.toFixed(2) + " (Alunos: " + totalAlunosTurma3 + ")\n\n" +
+                                    "Total de alunos em turmas com média 7: " + totalAlunosMediaSete + "\n" +
+                                    "Média geral da escola: " + mediaGeral.toFixed(2)
+                                );
+
+                                return false;
+                            }
+                        </script>
+                    </body>
+
+                    </html>
                 </textarea>
                 
                 <button onclick="abrirExemplo('estruturafacaenquanto/atividade1/index.html')" class="btn-explorar">teste
