--- a/projetos/condicionais/switch-case/atividade1-switch.html
+++ b/projetos/condicionais/switch-case/atividade1-switch.html
@@ -256,43 +256,37 @@
 
     <footer>
         <div class="jscript">
-            <img src="../../../assets/icon-javascript.svg" alt="JavaScript">
+            <img src="assets/icon-javascript.svg" alt="">
         </div>
         <div class="container-info-footer">
             <div class="info-footer">
                 <div class="info">
-                    <a href="../../../condicionais.html" class="title-est">
-                        <p>estruturas condicionais</p>
-                    </a>
-                    <a href="../../../condicionais.html#if-else">
+                    <a href="condicionais.html" class="title-est"><p>estruturas condicionais</p></a>
+                    <a href="condicionais.html#if-else">
                         <p>if else</p>
                     </a>
-                    <a href="../../../condicionais.html#switch-case">
+                    <a href="condicionais.html#switch-case">
                         <p>switch case</p>
                     </a>
                 </div>
                 <div class="info">
-                    <a href="../../../repeticao.html" class="title-est">
-                        <p>estruturas de repeticao</p>
-                    </a>
-                    <a href="../../../repeticao.html#for">
+                    <a href="repeticao.html" class="title-est"><p>estruturas de repeticao</p></a>
+                    <a href="repeticao.html#for">
                         <p>for</p>
                     </a>
-                    <a href="../../../repeticao.html#while">
+                    <a href="repeticao.html#while">
                         <p>while</p>
                     </a>
-                    <a href="../../../repeticao.html#do-while">
+                    <a href="repeticao.html#do-while">
                         <p>do while</p>
                     </a>
                 </div>
                 <div class="info">
-                    <a href="../../../vetores.html" class="title-est">
+                    <a href="vetores.html" class="title-est"><p>array</p></a>
+                    <a href="vetores.html#array">
                         <p>vetores</p>
                     </a>
-                    <a href="../../../vetores.html#array">
-                        <p>array</p>
-                    </a>
-                    <a href="../../../vetores.html#matrix">
+                    <a href="vetores.html#matrix">
                         <p>matrix</p>
                     </a>
                 </div>
