--- a/repeticao.html
+++ b/repeticao.html
@@ -168,7 +168,7 @@
         </div>
     </section>
 
-     <footer>
+    <footer>
         <div class="jscript">
             <img src="assets/icon-javascript.svg" alt="">
         </div>
@@ -196,9 +196,9 @@
                     </a>
                 </div>
                 <div class="info">
-                    <a href="vetores.html" class="title-est"><p>vetores</p></a>
+                    <a href="vetores.html" class="title-est"><p>array</p></a>
                     <a href="vetores.html#array">
-                        <p>array</p>
+                        <p>vetores</p>
                     </a>
                     <a href="vetores.html#matrix">
                         <p>matrix</p>
