--- a/index.html
+++ b/index.html
@@ -216,9 +216,9 @@
                     </a>
                 </div>
                 <div class="info">
-                    <a href="vetores.html" class="title-est"><p>vetores</p></a>
+                    <a href="vetores.html" class="title-est"><p>array</p></a>
                     <a href="vetores.html#array">
-                        <p>array</p>
+                        <p>vetores</p>
                     </a>
                     <a href="vetores.html#matrix">
                         <p>matrix</p>
