--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
                     </div>
                 </li>
                 <li>
-                    <a class="opcao-menu" href="index.html#vetores">vetores</a>
+                    <a class="opcao-menu" href="index.html#vetores">array</a>
                     <div class="sub-categoria">
-                        <a href="vetores.html#array">array</a>
+                        <a href="vetores.html#array">vetores</a>
                         <a href="vetores.html#matrix">matrix</a>
                     </div>
                 </li>
