--- a/projeto.html
+++ b/projeto.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-     <header>
+    <header>
         <nav>
             <ul>
                 <li>
@@ -33,9 +33,9 @@
                     </div>
                 </li>
                 <li>
-                    <a class="opcao-menu" href="index.html#vetores">vetores</a>
+                    <a class="opcao-menu" href="index.html#vetores">array</a>
                     <div class="sub-categoria">
-                        <a href="vetores.html#array">array</a>
+                        <a href="vetores.html#array">vetores</a>
                         <a href="vetores.html#matrix">matrix</a>
                     </div>
                 </li>
