--- a/projetos/vetores/array/atividade4-array.html
+++ b/projetos/vetores/array/atividade4-array.html
@@ -33,16 +33,15 @@
                     </div>
                 </li>
                 <li>
-                    <a class="opcao-menu" href="../../../vetores.html">vetores</a>
+                    <a class="opcao-menu" href="../../../vetores.html">array</a>
                     <div class="sub-categoria">
-                        <a href="../../../vetores.html#array">array</a>
+                        <a href="../../../vetores.html#array">vetores</a>
                         <a href="../../../vetores.html#matrix">matrix</a>
                     </div>
                 </li>
         </nav>
         </ul>
     </header>
-
     <section id="codigo" class="codigo">
         <div class="container-condicionais">
             <div class="container-condicionais-esquerda">
