--- a/projetos/condicionais/if-else/atividade2-if.html
+++ b/projetos/condicionais/if-else/atividade2-if.html
@@ -33,9 +33,9 @@
                     </div>
                 </li>
                 <li>
-                    <a class="opcao-menu" href="../../../vetores.html">vetores</a>
+                    <a class="opcao-menu" href="../../../vetores.html">array</a>
                     <div class="sub-categoria">
-                        <a href="../../../vetores.html#array">array</a>
+                        <a href="../../../vetores.html#array">vetores</a>
                         <a href="../../../vetores.html#matrix">matrix</a>
                     </div>
                 </li>
