--- a/repeticao.html
+++ b/repeticao.html
@@ -198,10 +198,10 @@
                 <div class="info">
                     <a href="vetores.html" class="title-est"><p>array</p></a>
                     <a href="vetores.html#array">
-                        <p>vetores</p>
+                        <p>vetor</p>
                     </a>
                     <a href="vetores.html#matrix">
-                        <p>matrix</p>
+                        <p>matriz</p>
                     </a>
                 </div>
             </div>
