--- a/projetos/repeticao/do-while/atividade3-do-while.html
+++ b/projetos/repeticao/do-while/atividade3-do-while.html
@@ -389,10 +389,10 @@
                 <div class="info">
                     <a href="vetores.html" class="title-est"><p>array</p></a>
                     <a href="vetores.html#array">
-                        <p>vetores</p>
+                        <p>vetor</p>
                     </a>
                     <a href="vetores.html#matrix">
-                        <p>matrix</p>
+                        <p>matriz</p>
                     </a>
                 </div>
             </div>
@@ -402,7 +402,6 @@
         </div>
 
     </footer>
-
     <script src="../../../js/main.js">
     </script>
 </body>
