--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
                 <li>
                     <a class="opcao-menu" href="index.html#vetores">array</a>
                     <div class="sub-categoria">
-                        <a href="vetores.html#array">vetores</a>
-                        <a href="vetores.html#matrix">matrix</a>
+                        <a href="vetores.html#array">vetor</a>
+                        <a href="vetores.html#matrix">matriz</a>
                     </div>
                 </li>
         </nav>
