--- a/projetos/repeticao/for/atividade1-for.html
+++ b/projetos/repeticao/for/atividade1-for.html
@@ -35,14 +35,13 @@
                 <li>
                     <a class="opcao-menu" href="../../../vetores.html">array</a>
                     <div class="sub-categoria">
-                        <a href="../../../vetores.html#array">vetores</a>
-                        <a href="../../../vetores.html#matrix">matrix</a>
+                        <a href="../../../vetores.html#array">vetor</a>
+                        <a href="../../../vetores.html#matrix">matriz</a>
                     </div>
                 </li>
         </nav>
         </ul>
     </header>
-
     <section id="codigo" class="codigo">
         <div class="container-condicionais">
             <div class="container-condicionais-esquerda">
