--- a/projetos/repeticao/while/atividade1-while.html
+++ b/projetos/repeticao/while/atividade1-while.html
@@ -33,10 +33,10 @@
                     </div>
                 </li>
                 <li>
-                    <a class="opcao-menu" href="../../../vetores.html">vetores</a>
+                    <a class="opcao-menu" href="../../../vetores.html">array</a>
                     <div class="sub-categoria">
-                        <a href="../../../vetores.html#array">array</a>
-                        <a href="../../../vetores.html#matrix">matrix</a>
+                        <a href="../../../vetores.html#array">vetor</a>
+                        <a href="../../../vetores.html#matrix">matriz</a>
                     </div>
                 </li>
         </nav>
