--- a/projetos/vetores/matriz/atividade3-matriz.html
+++ b/projetos/vetores/matriz/atividade3-matriz.html
@@ -35,8 +35,8 @@
                 <li>
                     <a class="opcao-menu" href="../../../vetores.html">array</a>
                     <div class="sub-categoria">
-                        <a href="../../../vetores.html#array">vetores</a>
-                        <a href="../../../vetores.html#matrix">matrix</a>
+                        <a href="../../../vetores.html#array">vetor</a>
+                        <a href="../../../vetores.html#matrix">matriz</a>
                     </div>
                 </li>
         </nav>
