--- a/index.html
+++ b/index.html
@@ -173,7 +173,8 @@
 
                 <a class="card" href="vetores.html#matrix">
                     <div class="img-card-vetores" alt="Imagem ilustrativa Padrão sobre If e else"></div>
-                    <h3>array bidimensional - Uma tabela de valores</h3>
+                    <h3>matrizes</h3>
+                    <p>array bidimensional - Uma tabela de valores</p>
                    
                 </a>
 
